--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@tailwindcss/cli": "^4.1.18",
-    "@tailwindcss/postcss": "^4.1.18",
-    "postcss": "^8.5.6",
+    "@cloudinary/ng": "^2.1.5",
+    "@cloudinary/url-gen": "^1.22.0",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -38,6 +36,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.5.2"
   }
 }
